<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/im_logo_vector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toTopOf="@+id/edt_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/edt_background"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:textAppearance="@style/username"
        app:layout_constraintBottom_toTopOf="@+id/edt_password"
        app:layout_constraintEnd_toEndOf="@+id/edt_password"
        app:layout_constraintStart_toStartOf="@+id/edt_password" />

    <EditText
        android:id="@+id/edt_password"

        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/edt_background"
        android:fontFamily="@font/roboto"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textAppearance="@style/password"
        app:layout_constraintBottom_toTopOf="@+id/tv_forgot_pass"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login" />

    <TextView
        android:id="@+id/tv_forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="22dp"
        android:background="@color/white"
        android:fontFamily="@font/roboto"
        android:text="@string/forgot_pass"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="148dp"
        android:layout_height="48dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/get_start"
        android:fontFamily="@font/roboto"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/do_not_have_acc"
        app:layout_constraintEnd_toEndOf="@+id/do_not_have_acc"
        app:layout_constraintStart_toStartOf="@id/do_not_have_acc" />

    <TextView
        android:id="@+id/do_not_have_acc"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginBottom="22dp"
        android:fontFamily="@font/roboto"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/tv_or"
        app:layout_constraintEnd_toEndOf="@+id/tv_or"
        app:layout_constraintStart_toStartOf="@+id/tv_or" />

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:fontFamily="@font/roboto"
        android:text="@string/or"
        android:textAppearance="@style/or"
        app:layout_constraintBottom_toTopOf="@+id/ll_social"
        app:layout_constraintEnd_toEndOf="@id/ll_social"
        app:layout_constraintStart_toStartOf="@id/ll_social" />

    <LinearLayout
        android:id="@+id/ll_social"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/btn_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="36dp"
            android:background="@null"
            android:src="@drawable/ic_google" />

        <ImageButton
            android:id="@+id/btn_flickr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/ic_flickr" />

        <ImageButton
            android:id="@+id/btn_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:background="@null"
            android:src="@drawable/ic_facebook"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>